--- a/source code/Toy Store/src/main/resources/application.yml
+++ b/source code/Toy Store/src/main/resources/application.yml
@@ -1,1 +1,10 @@
-
+spring:
+   datasource:
+      url: jdbc:mysql://localhost:3306/toy_store
+      username: root
+      password: root
+   jpa:
+      hibernate:
+         ddl-auto: validate
+         database-platform: org.hibernate.dialect.MySQLInnoDBDialect
+         database: mysql
