--- a/source code/Toy Store/pom.xml
+++ b/source code/Toy Store/pom.xml
@@ -13,6 +13,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>task</name>
 	<description>small REST API for a toy store</description>
+	<packaging>war</packaging>
 
 	<properties>
 		<java.version>1.8</java.version>
@@ -45,6 +46,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>toy_store</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
@@ -52,6 +54,10 @@
 			</plugin>
 		</plugins>
 	</build>
+	<scm>
+		<connection>scm:git:https://github.com/duckShooter/orange_gi.git</connection>
+	  	<tag>HEAD</tag>
+ 	 </scm>
 
 	<repositories>
 		<repository>
