--- a/source code/Toy Store/src/main/resources/application.yml
+++ b/source code/Toy Store/src/main/resources/application.yml
@@ -5,6 +5,6 @@ spring:
       password: root
    jpa:
       hibernate:
-         ddl-auto: validate
+         ddl-auto: update
          database-platform: org.hibernate.dialect.MySQLInnoDBDialect
          database: mysql
